--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "lab1.py" ]
   pull_request:
-    branches: [ "test_.py ]
+    branches: [ "test_.py" ]
 
 jobs:
   build:
