--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,7 +23,7 @@
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install -r .github/workflows/requirements.txt
+            pip install -r test-CI-CD/.github/workflows/requirements.txt
 
         - name: Run tests
           run: |
